Update install notes
Bump versions of dependencies to the currently supported
and tested versions. Bump year.

--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,13 @@
-This software is currently developed and tested with django version 1.10
+iThis software is currently developed and tested with django version 1.10
 
 It depends on several third party extensions that have to be installed on the system:
-+ django-registration version =1.0 (currently, newer versions not tested)
-+ django-crispy-forms version >=1.6.0
-+ python-rtkit version >=0.6.0
++ django-registration version >=2.2 [used with model based workflow]
++ django-crispy-forms version >=1.6.1
++ python-rtkit version >=0.7.0
 + python-lxml
-+ requests
++ requests >= 2.12
 + python-pil (for image fields)
++ django-recaptcha >= 1.2.0
 
 
 The system is currently used with mod_wsgi in an apache environment. However, it is also
