Some text corrections and install changes

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-iThis software is currently developed and tested with django version 1.10
+This software is currently developed and tested with django version 1.10
 
 It depends on several third party extensions that have to be installed on the system:
 + django-registration version >=2.2 [used with model based workflow]
@@ -13,6 +13,7 @@ It depends on several third party extensions that have to be installed on the sy
 The system is currently used with mod_wsgi in an apache environment. However, it is also
 possible to use fastcgi. An example of a working apache config for mod_wsgi looks like:
 
+`
 	Alias /static/ 	/var/www/sabot/django/static/
 	Alias /media	/var/www/sabot/django/media
 
@@ -36,13 +37,14 @@ possible to use fastcgi. An example of a working apache config for mod_wsgi look
 			allow from all
 		</Files>
 	</Directory>
+`
 
 In order to test the software, you may simply (as usual for django projects)
-use ./manage.py run
+use "./manage.py runserver"
 
 Before you start
-- create the config files sabot/settings.py sabot/conferenceSettings.py sabot/localSettings.py (and sabot/prodSettings.py if you want to distinguish a development and a production version) from their example files (prodSettings.py needs the same parameter
-- run the project use "./manage.py syncdb" to setup your database and create an admin user
+- create the config files sabot/settings.py sabot/conferenceSettings.py sabot/localSettings.py (and sabot/prodSettings.py if you want to distinguish a development and a production version) from their example files (prodSettings.py needs the same parameters)
+- run the project use "./manage.py migrate --run-syncdb" to setup your database and create an admin user
 
 If you want to use the invoice creation functionality, it is required that
 you have libreoffice (or openoffice) installed on the server.
