Created missing migration files

--- a/INSTALL
+++ b/INSTALL
@@ -42,7 +42,8 @@ use "./manage.py runserver"
 
 Before you start
 - create the config files sabot/settings.py sabot/conferenceSettings.py sabot/localSettings.py (and sabot/prodSettings.py if you want to distinguish a development and a production version) from their example files (prodSettings.py needs the same parameters)
-- run the project use "./manage.py migrate --run-syncdb" to setup your database and create an admin user
+- run "./manage.py migrate" to setup your database
+- run "./manage.py createsuperuser" to create your admin account
 
 If you want to use the invoice creation functionality, it is required that
 you have libreoffice (or openoffice) installed on the server.
